--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".location.LocationActivity"></activity>
+        <activity android:name=".button.SwitchButtonActivity"></activity>
+        <activity android:name=".dialog.DialogActivity" />
+        <activity android:name=".location.LocationActivity" />
         <activity android:name=".service.ServiceActivity" />
         <activity android:name=".start.StartActivity" />
         <activity android:name=".snake.SnakeActivity" />
