--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".button.SwitchButtonActivity"></activity>
+        <activity android:name=".scanIp.ScanIpActivity"></activity>
+        <activity android:name=".text.TextViewActivity" />
+        <activity android:name=".seekbar.SeekBarActivity" />
+        <activity android:name=".mvp.MvpTestActivity" />
+        <activity android:name=".button.SwitchButtonActivity" />
         <activity android:name=".dialog.DialogActivity" />
         <activity android:name=".location.LocationActivity" />
         <activity android:name=".service.ServiceActivity" />
