--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
     implementation "com.android.support:design:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
     implementation "com.android.support:support-v4:28.0.0"
+
+
+    implementation 'com.tencent.bugly:crashreport:latest.release' //其中lat est.release指代最新版本号，也可以指定明确的版本号，例如2.1.5
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
 }
