--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".scanIp.ScanIpActivity"></activity>
+        <activity android:name=".refreshList.RefreshListActivity"></activity>
+        <activity android:name=".chart.TestActivity" />
+        <activity
+            android:name=".chart.ChartLineActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".scanIp.ScanIpActivity" />
         <activity android:name=".text.TextViewActivity" />
         <activity android:name=".seekbar.SeekBarActivity" />
         <activity android:name=".mvp.MvpTestActivity" />
