--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".barChart.BarChartActivity"></activity>
-        <activity android:name=".sildeChart.SildeChartActivity"></activity>
+        <activity android:name=".ratePic.TempActivity"></activity>
+        <activity android:name=".barChart.BarChartActivity" />
+        <activity android:name=".sildeChart.SildeChartActivity" />
         <activity android:name=".refreshList.RefreshListActivity" />
         <activity android:name=".chart.TestActivity" />
         <activity
